# aletheia

./: .gitignore  README.md  pyproject.toml
src/aletheia/: __init__.py
src/aletheia/backend/: README.md  main.py
src/aletheia/backend/core/: auth.py  db.py  settings.py
src/aletheia/backend/models/: __init__.py  interview.py  linkedin_snapshot.py  resume.py  user_activity.py  users.py
src/aletheia/backend/routers/: __init__.py  auth.py
src/aletheia/backend/routers/protected/: __init__.py  me.py
src/aletheia/scripts/: init_tables.py  test_postgres_connection.py  wipe_postgres_tables.py
src/aletheia/utils/: __init__.py
src/frontend/src/app/login/: page.tsx
